@@ -3,31 +3,33 @@
 
 #include <boost/smart_ptr/shared_ptr.hpp>
 #include <string>
+#include <mutex>
 
 struct Config;
 typedef boost::shared_ptr<Config> config_ptr;
 
 /**
- * @class ConfigDAO
+ * @class ConfigDao
  * @author Michael Griffin
  * @date 2/21/2016
- * @file dao_config.hpp
+ * @file config_dao.hpp
  * @brief Handles Reading and Writting Config Class from XML
  */
-class ConfigDAO
+class ConfigDao
 {
 public:
 
-    ConfigDAO(config_ptr config, std::string path);
-    ~ConfigDAO();
+    ConfigDao(config_ptr config, std::string path);
+    ~ConfigDao();
 
-    void saveConfig();
-    void loadConfig();
+    bool saveConfig();
+    bool loadConfig();
 
     void test();
 
     config_ptr  m_config;
     std::string m_path;
+    std::mutex  m;
 
 };
 
